src/test/ui/feature-gate-generic_associated_types.stderr
error[E0658]: generic associated types are unstable (see issue #44265)
  --> $DIR/feature-gate-generic_associated_types.rs:14:5
   |
LL |     type Pointer<T>: Deref<Target = T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: generic associated types are unstable (see issue #44265)
  --> $DIR/feature-gate-generic_associated_types.rs:16:5
   |
LL |     type Pointer2<T>: Deref<Target = T> where T: Clone, U: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable (see issue #44265)
  --> $DIR/feature-gate-generic_associated_types.rs:16:5
   |
LL |     type Pointer2<T>: Deref<Target = T> where T: Clone, U: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: generic associated types are unstable (see issue #44265)
  --> $DIR/feature-gate-generic_associated_types.rs:23:5
   |
LL |     type Pointer<usize> = Box<usize>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: generic associated types are unstable (see issue #44265)
  --> $DIR/feature-gate-generic_associated_types.rs:25:5
   |
LL |     type Pointer2<u32> = Box<u32>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable (see issue #44265)
  --> $DIR/feature-gate-generic_associated_types.rs:30:5
   |
LL |     type Assoc where Self: Sized;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
